// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 7.925,
  "atk": 45,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 7,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 2.36,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 147,
  "healMult": 1.0975000000000001,
  "hp": 395,
  "intStat": 15,
  "magicAtk": 33,
  "magicDef": 7,
  "maxHp": 395,
  "maxMp": 80,
  "minDamage": 2,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 294,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.475,
  "atk": 8,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 3,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1399999999999997,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.0975000000000001,
  "hp": 170,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 170,
  "maxMp": 80,
  "minDamage": 3,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 1.725,
  "atk": 13,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 7,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1199999999999997,
  "critResistPct": 4.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 14.5,
  "healMult": 1.1725,
  "hp": 395,
  "intStat": 148,
  "magicAtk": 33,
  "magicDef": 14,
  "maxHp": 395,
  "maxMp": 354,
  "minDamage": 9,
  "mp": 354,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 29,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.525,
  "atk": 23,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 7,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 21.25,
  "critMult": 2.84,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 16.8,
  "extraAttackChancePct": 59.5,
  "healMult": 1.0975000000000001,
  "hp": 395,
  "intStat": 15,
  "magicAtk": 18,
  "magicDef": 7,
  "maxHp": 395,
  "maxMp": 80,
  "minDamage": 2,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 119,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 1.875,
  "atk": 11,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 11,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1799999999999997,
  "critResistPct": 1.5,
  "def": 25,
  "evasionPct": 3.7,
  "extraAttackChancePct": 15,
  "healMult": 1.7175000000000002,
  "hp": 550,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 550,
  "maxMp": 80,
  "minDamage": 10,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 3.935,
  "atk": 34,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 8,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.3859999999999997,
  "critResistPct": 1.5,
  "def": 13,
  "evasionPct": 3.7,
  "extraAttackChancePct": 14,
  "healMult": 1.2575,
  "hp": 435,
  "intStat": 15,
  "magicAtk": 14,
  "magicDef": 7,
  "maxHp": 435,
  "maxMp": 80,
  "minDamage": 17,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 28,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "e0c70c2f7584fe146c1c6a477bb0b1091b837127",
    "outcome": "win",
    "playerHp": 434,
    "playerMp": 80,
    "turns": 10,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "ecc6023893c2de73905ad1dffed62acf60c0b563",
    "outcome": "win",
    "playerHp": 433,
    "playerMp": 80,
    "turns": 28,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "c70edb7de439140c202aaf9e68de46b7cf6a83e2",
    "outcome": "win",
    "playerHp": 306,
    "playerMp": 80,
    "turns": 44,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "04c7da6ef7be18b0203a4b1415117d7c849d9bf2",
    "outcome": "win",
    "playerHp": 388,
    "playerMp": 80,
    "turns": 13,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "a9420a0ca9770df353b45521de3e126d3ad9bb3c",
    "outcome": "win",
    "playerHp": 178,
    "playerMp": 354,
    "turns": 54,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "9ee0c4f2bf682ea7f8b470b2d2d5a616ed5acbc5",
    "outcome": "win",
    "playerHp": 326,
    "playerMp": 80,
    "turns": 484,
  },
  {
    "enemyHp": 208,
    "label": "heal_vs_들소_boss",
    "logSha": "c935a33c3d2e0bcf87e10b96688e0c93d875dfff",
    "outcome": "lose",
    "playerHp": 550,
    "playerMp": 80,
    "turns": 256,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "a99b942a5026c111788c875abbc1ee1333d9dcac",
    "outcome": "win",
    "playerHp": 381,
    "playerMp": 306,
    "turns": 18,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "30c90a8c65db8f69709984f4e5bb16f7840a3fa2",
    "outcome": "win",
    "playerHp": 168,
    "playerMp": 80,
    "turns": 27,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "b5ff0402f0b73c983787d5166e8497525078c469",
    "outcome": "p1_win",
    "turns": 67,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "36b7066937b0f950ae595ece547cefbb469f8e78",
    "outcome": "p1_win",
    "turns": 33,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "e4e83e8d8eed3f2757379b16667afececb13aaef",
    "outcome": "p2_win",
    "turns": 222,
  },
]
`;
